Added MongoDB backing and commands now have the ability to change the image

--- a/ui/html/indigo.html
+++ b/ui/html/indigo.html
@@ -35,7 +35,7 @@
 				<input id="cmd" type="text"></input>
 			</div>
 			<div id="viewer">
-				<img src="/img/1.png" alt="...???...">
+				<img id="viewerimg" src="/img/1.png" alt="...???...">
 			</div>
 			<br style="clear: left;" />
 		</div>
